macros/tests/ui/declare/fix_attr_indirect_follow_host_fail.stderr
error: Can't init widget because circle follow: a.cursor ～> b , b.cursor ～> a
  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:23:11
   |
23 |       id: a,
   |           ^
24 |       size: Size::zero(),
25 |       cursor: b.cursor,
   |       ^^^^^^  ^^^^^^^^
26 |       SizedBox {
27 |         id: b,
   |             ^
28 |         size: Size::zero(),
29 |         cursor: a.cursor
   |         ^^^^^^  ^^^^^^^^
   |
note: If the circular is your want and will finally not infinite change,you should break the init circle and declare some follow relationship in `data_flow`, and remember use `#[skip_nc]` attribute to skip the no change trigger of the field modifyto ignore infinite state change trigger.
  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:25:7
   |
25 |       cursor: b.cursor,
   |       ^^^^^^
...
29 |         cursor: a.cursor
   |         ^^^^^^
